# discord2

./: Cargo.toml
examples/: LICENSE.md  audit-log.rs  channels.rs  create-global-application-command.rs  get-channel-message.rs  get-channel.rs  global-application-commands.rs  guild-application-commands.rs
src/: application.rs  audit_log.rs  channel.rs  discord.rs  emoji.rs  enums.rs  game_sdk.rs  gateway.rs  guild.rs  image.rs  lib.rs  permissions.rs  resources.rs  snowflake.rs  str.rs  teams.rs  user.rs  visitor.rs  voice.rs  webhook.rs
src/application/: commands.rs
src/channel/: embed.rs  message.rs
src/discord/: error.rs  requests.rs
src/guild/: integration.rs
src/resources/: application.rs  audit_log.rs  channel.rs  emoji.rs  guild.rs  user.rs  voice.rs  webhook.rs
src/resources/application/: commands.rs
src/resources/channel/: embed.rs  message.rs
src/resources/guild/: integration.rs
