[package]
name = "discord2"
version = "0.1.0"
authors = ["Sam Wilson <tecywiz121@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["default-tls"]
default-tls = [ "reqwest/default-tls" ]

[dependencies]
educe = "0.4.16"

[dependencies.chrono]
version = "0.4.19"
default-features = false

[dependencies.reqwest]
version = "0.11.3"
default-features = false
