[package]
name = "discord2"
version = "0.1.0"
authors = ["Sam Wilson <tecywiz121@hotmail.com>"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["default-tls"]
default-tls = [ "reqwest/default-tls" ]
backtraces = [ "snafu/backtraces" ]

[dependencies]
educe = "0.4.16"
snafu = "0.6.10"
typed-builder = "0.9.0"
bitflags = "1.2.1"

[dependencies.serde]
version = "1.0.126"
features = [ "derive" ]

[dependencies.chrono]
version = "0.4.19"
default-features = false
features = [ "serde" ]

[dependencies.reqwest]
version = "0.11.3"
default-features = false
features = [ "json" ]

[dev-dependencies]
serde_json = "1.0.64"
tokio = { version = "1.6.0", features = [ "macros" ] }
